--- a/swade-spices/lang/en.json
+++ b/swade-spices/lang/en.json
@@ -1,101 +1,85 @@
 {
-  "SWADESPICE.ColourSettingConf": "Colour configuration",
-  "SWADESPICE.ColourSettingConfLabel": "Open colour configurations",
-  "SWADESPICE.ColourSettingConfHint": "Inside this menu you can set all the colours for the community sheets.",
-  "SWADESPICE.ColourOptionSettingsName": "Colour Options:",
-  "SWADESPICE.ColourOptionSettingsHint": "Here you can set up the colours for the community sheets.",
-  "SWADESPICE.Save": "Save",
-  "SWADESPICE.BennieFrontName": "Custom Benny front image:",
-  "SWADESPICE.BennieFrontHint": "Path to the image to be shown on the Benny front side.",
-  "SWADESPICE.BennieBackName": "Custom Benny back image:",
-  "SWADESPICE.BennieBackHint": "Path to the image to be shown on the Benny back side. This image will be shown on the official sheet.",
-  "SWADESPICE.sheetLogoName": "Custom Logo:",
-  "SWADESPICE.sheetLogoHint": "Set up a custom logo to be shown on the character sheet (PC sheet only). (Make sure that you are allowed to use whatever you select here or on any of the settings below.)",
-  "SWADESPICE.sheetBackName": "Community Sheet Background:",
-  "SWADESPICE.sheetBackHint": "Set a custom background image for the Community Sheet.",
-  "SWADESPICE.windowBGColourName": "Community Sheet background colour:",
-  "SWADESPICE.windowBGColourHint": "You only need that if your sheets background image has some amount of transparency. This sets a background colour for the community sheet so that a colour can be seen through a transparent background. This colour is also used for the chat if you toggle the option to set the chats background image to be your sheets background image. If not, there are no ill effects on the chat even if your sheets background image has transparency.",
-  "SWADESPICE.windowBGColourButton": "Pick a background colour for your sheet. Default: #faf9ed",
-  "SWADESPICE.tabColourName": "Tab and header background colour:",
-  "SWADESPICE.tabColourHint": "Colour for the tabs and headers background.",
-  "SWADESPICE.tabColourButton": "Pick a tab and header background colour. Default: #972824",
-  "SWADESPICE.activeTabColourName": "Active tab background colour:",
-  "SWADESPICE.activeTabColourHint": "Colour for the active (and hovered over) tab background.",
-  "SWADESPICE.activeTabColourButton": "Pick a background colour for the active tab. Default: #aca592",
-  "SWADESPICE.activeTabTextColourName": "Active tab text colour:",
-  "SWADESPICE.activeTabTextColourHint": "Pick a text colour for the active tab. Default: #dfe6f5",
-  "SWADESPICE.activeTabTextColourButton": "Colour for the active (and hovered over) tab text.",
-  "SWADESPICE.tabBorderColourName": "Tab and header border colour:",
-  "SWADESPICE.tabBorderColourHint": "Sets the colour of the tabs and headers border. It is 1px wide.",
-  "SWADESPICE.tabBorderColourButton": "Pick a border colour for tabs and headers. Default: #2c4251",
-  "SWADESPICE.tabBorderRadiusName": "Tab border radius:",
-  "SWADESPICE.tabBorderRadiusHint": "You can set round edges of your tabs with this option, it also affects powers in the Powers tab. It is the radius in pixels. Default: 4",
-  "SWADESPICE.headerBorderRadiusName": "Header border radius:",
-  "SWADESPICE.headerBorderRadiusHint": "You can set round edges of your headers with this option. It is the radius in pixels. Default: 0",
-  "SWADESPICE.quicAccessBGColourName": "Quick Access background colour:",
-  "SWADESPICE.quicAccessBGColourHint": "Changes the background colour of the Quick Access gear cards.",
-  "SWADESPICE.quicAccessBGColourButton": "Pick a background colour for the Quick Access. Default: #00000033",
-  "SWADESPICE.evenSkillsBGColourName": "Even Skills background colour:",
-  "SWADESPICE.evenSkillsBGColourHint": "(PC sheet only.) Changes the background colour of every second (even) Skill in the list of the PC sheet. It will be applied to even Edges, Hindrances (both in the Edges tab) and Gear (Inventory tab) as well.",
-  "SWADESPICE.evenSkillsBGColourButton": "Pick a background colour for the even Skills. Default: #0000001a",
-  "SWADESPICE.textColourName": "Tab and header text colour:",
-  "SWADESPICE.textColourHint": "Colour for the tabs and headers text.",
-  "SWADESPICE.textColourButton": "Pick a Tab and header text colour. Default: #dfe6f5",
-  "SWADESPICE.columnColourName": "Item column colour:",
-  "SWADESPICE.columnColourHint": "(PC sheet only.) Changes the colour of the item columns background (in the items tab).",
-  "SWADESPICE.columnColourButton": "Pick a inventory column colour. Default: #972824",
-  "SWADESPICE.columnTextColourName": "Item column text colour:",
-  "SWADESPICE.columnTextColourHint": "(PC sheet only.) Changes the colour of the item columns text (in the items tab).",
-  "SWADESPICE.columnTextColourButton": "Pick a inventory column text colour. Default: #ffffff",
-  "SWADESPICE.passiveABTabColourName": "Passive AB tab background:",
-  "SWADESPICE.passiveABTabColourHint": "Changes the colour of the unselected Arcane Background tab (in the powers tab). The active (selected) one and the hovered over one share the colour of the general active tab (see above).",
-  "SWADESPICE.passiveABTabColourButton": "Pick a passive AB tab colour. Default: #972824",
-  "SWADESPICE.checkboxBGColourName": "Checkbox background colour:",
-  "SWADESPICE.checkboxBGColourHint": "Sets the background colour for the checkboxes (for example the Shaken Checkbox).",
-  "SWADESPICE.checkboxBGColourButton": "Pick a checkbox colour. Default: #aca592",
-  "SWADESPICE.checkmarkColourName": "Checkmark Colour:",
-  "SWADESPICE.checkmarkColourHint": "Sets the checkmark colour inside the checkbox after checking it.",
-  "SWADESPICE.checkmarkColourButton": "Pick a checkmark colour. Default: #972824",
-  "SWADESPICE.AddSkillIcons": "Add icons for skills",
-  "SWADESPICE.AddSkillIconsHint": "Set this setting to add icons to skills in the sheet.",
-  "SWADESPICE.PortraitFirst": "Add a character portrait on the character sheet",
-  "SWADESPICE.PortraitFirstHint": "Put a portrait of the character behind the name.",
-  "SWADESPICE.PortraitItemsName": "Add a character portrait on owned items",
-  "SWADESPICE.PortraitItemsHint": "This adds the characters portrait or token image to items the character owns.",
-  "SWADESPICE.CharnameCenteredName": "Center character name",
-  "SWADESPICE.CharnameCenteredHint": "Aligns the character name to the center of its field.",
-  "SWADESPICE.ChatBackgroundName": "Custom chat background:",
-  "SWADESPICE.ChatBackgroundHint": "If enabled, the background of your sheet (see option above) is also used as the background for chat messages.",
-  "SWADESPICE.privateMessageBorderName": "Border for whispered chat message:",
-  "SWADESPICE.privateMessageBorderHint": "This adds a border to whispered chat messages of the given colour which is 3 pixels wide.",
-  "SWADESPICE.privateMessageBorderButton": "Pick a border colour for your private messages. Defauft: #ffffff00",
-  "SWADESPICE.FontFamilyName": "Change the sheets font:",
-  "SWADESPICE.FontFamilyHint": "Type the exact name of the font here (i.e. 'Arial'). All players must have the font installed, so share this font with your players before playing or restrict yourself to fonts which are installed on all operating systems. (Uses the standard font if empty.)",
-  "SWADESPICE.scrollbarColourName": "Scrollbar main colour:",
-  "SWADESPICE.scrollbarColourHint": "Changes the main (background) colour of scrollbars. (Does not affect scrollbars in currently edited fields.)",
-  "SWADESPICE.scrollbarColourButton": "Pick a scrollbar colour. Default: #782e22",
-  "SWADESPICE.scrollbarBorderColourName": "Scrollbar border colour:",
-  "SWADESPICE.scrollbarBorderColourHint": "Changes the border colour of scrollbars. It has a radius of 1 pixel. (Does not affect scrollbars in currently edited fields.)",
-  "SWADESPICE.scrollbarBorderColourButton": "Pick a scrollbar border colour. Default: #ff6400",
-  "SWADESPICE.openSFXName": "Open Sheet SFX:",
-  "SWADESPICE.openSFXHint": "The sound to be played whenever a character sheet is opened. Empty this line if you don't want a sound effect upon opening a sheet. The SFX is only played for the user who opens a sheet, not for everyone.",
-  "SWADESPICE.openItemSFXName": "Open Item Sheet SFX:",
-  "SWADESPICE.openItemSFXHint": "The sound to be played whenever an item sheet (gear, weapon, edge, etc) is opened. Empty this line if you don't want a sound effect upon opening a sheet. The SFX is only played for the user who opens a sheet, not for everyone.",
-  "SWADESPICE.closeSFXName": "Close Sheet SFX:",
-  "SWADESPICE.closeSFXHint": "The sound to be played whenever a character sheet is closed. Empty this line if you don't want a sound effect upon closing a sheet. The SFX is only played for the user who closes a sheet, not for everyone.",
-  "SWADESPICE.closeItemSFXName": "Close Item Sheet SFX:",
-  "SWADESPICE.closeItemSFXHint": "The sound to be played whenever an item sheet (gear, weapon, edge, etc) is closed. Empty this line if you don't want a sound effect upon closing a sheet. The SFX is only played for the user who closes a sheet, not for everyone.",
-  "SWADESPICE.lockRotationName": "Lock token rotation by default",
-  "SWADESPICE.lockRotationHint": "This option locks the token rotation of newly created and imported actors by default. This is especially useful for portait style token art which you typically don't want to rotate when you rotate your directed light source. It does not change actors which already exist in the world. If you use top-down view tokens you should disable this option.",
-  "SWADESPICE.hidePPName": "Hide Power Points",
-  "SWADESPICE.hidePPHint": "This hides Power Points from the actor sheets and the power item sheet, for example for the No Power Points setting rule.",
-  "SWADESPICE.hideCurrName": "Hide Currency",
-  "SWADESPICE.hideCurrHint": "This hides the currency from the PC sheet, for example when using the Wealth rules or in case you want to calculate weight for the currency.",
-  "SWADESPICE.hideTextName": "Hide Text from Header Buttons",
-  "SWADESPICE.hideTextHint": "This option hides all core and system text from buttons in the header fields. It will only leave the buttons and adds tooltips if the user hovers the mouse over it. This option can save a lot of space in the headers but can confuse new users. Currently a bit buggy but nothing bad will happen.",
-  "SWADESPICE.None": "None",
-  "SWADESPICE.Actor": "Actor portrait",
-  "SWADESPICE.Token": "Token Image",
-  "SWADESPICE.PCHeaderSizeName": "Character sheet auto adjust header height",
-  "SWADESPICE.PCHeaderSizeHint": "Mark this option to let Spices try to adjust the header height for your logos (works better with landscape images)"
+    "SWADESPICE.SettingName-LeftBarBGColour": "Left Bar Background Colour:",
+    "SWADESPICE.SettingHint-LeftBarBGColour": "The background colour of the left bar on the sheet, where derived stats are.",
+    "SWADESPICE.SettingName-LeftBarBGImage": "Left Bar Background Image:",
+    "SWADESPICE.SettingHint-LeftBarBGImage": "The background image of the left bar on the sheet, where derived stats are.",
+    "SWADESPICE.SettingName-LeftBarLogo": "Logo:",
+    "SWADESPICE.SettingHint-LeftBarLogo": "The Logo that appears on the top left of the sheet.",
+    "SWADESPICE.SettingName-LeftBarHealthTextColour": "Health Text Colour:",
+    "SWADESPICE.SettingHint-LeftBarHealthTextColour": "The text colour for Wounds and Fatigue on the left bar.",
+    "SWADESPICE.SettingName-LeftBarStatusTextColour": "Status Text Colour:",
+    "SWADESPICE.SettingHint-LeftBarStatusTextColour": "The text colour for status effects (i.e. Shaken).",
+    "SWADESPICE.SettingName-LeftBarDerivedNameTextColour": "Derived Stats Header Text Colour:",
+    "SWADESPICE.SettingHint-LeftBarDerivedNameTextColour": "The text colour for the headings under derived stats.",
+    "SWADESPICE.SettingName-LeftBarDerivedValueTextColour": "Derived Stats Text Colour:",
+    "SWADESPICE.SettingHint-LeftBarDerivedValueTextColour": "The text colour for the actual derived stats.",
+    "SWADESPICE.SettingName-LeftBarDerivedModifierTextColour": "Derived Stats Modifier Text Colour:",
+    "SWADESPICE.SettingHint-LeftBarDerivedModifierTextColour": "The text colour for the modifiers of derived stats (i.e. Armor).",
+    "SWADESPICE.SettingName-TopBarColour": "Top Bar Background Colour:",
+    "SWADESPICE.SettingHint-TopBarColour": "The background colour of the top bar on the sheet, where the name is.",
+    "SWADESPICE.SettingName-TopBarBGImage": "Top Bar Background Image:",
+    "SWADESPICE.SettingHint-TopBarBGImage": "The background image of the top bar on the sheet, where the name is.",
+    "SWADESPICE.SettingName-CharnameTextColour": "Charname Colour:",
+    "SWADESPICE.SettingHint-CharnameTextColour": "The colour of the characters name. This also affects Race, Rank and Advances.",
+    "SWADESPICE.SettingName-BodyBGColour": "Main Body Background Colour:",
+    "SWADESPICE.SettingHint-BodyBGColour": "The background colour of the main body on the sheet, where you find the tabs and their content.",
+    "SWADESPICE.SettingName-BodyBGImage": "Main Body Background Image:",
+    "SWADESPICE.SettingHint-BodyBGImage": "The background image of the main body on the sheet, where you find the tabs and their content.",
+    "SWADESPICE.SettingName-CheckboxColour":"Unchecked Checkbox Colour:",
+    "SWADESPICE.SettingHint-CheckboxColour":"The background colour of unchecked (deactivated) checkboxes.",
+    "SWADESPICE.SettingName-CheckboxColourChecked":"Checked Checkbox Colour:",
+    "SWADESPICE.SettingHint-CheckboxColourChecked":"The background colour of checked (activated) checkboxes.",
+    "SWADESPICE.SettingName-CheckmarkColour":"Checkmark Colour:",
+    "SWADESPICE.SettingHint-CheckmarkColour":"The colour of checkmarks in checked (activated) checkboxes.",
+    "SWADESPICE.SettingName-CheckmarkColourFocus":"Focused Checkbox Colour:",
+    "SWADESPICE.SettingHint-CheckmarkColourFocus":"The background colour of checkboxes when they have focus (whilst being clicked, before the button is released).",
+    "SWADESPICE.ThemeName": "Theme:",
+    "SWADESPICE.ThemeHint": "Here you can load a predefined theme.",
+    "SWADESPICE.CustomTitle": "Custom Sheet Configuration",
+    "SWADESPICE.CustomSheetName":  "Custom sheet configuration",
+    "SWADESPICE.CustomSheetLabel":  "Customize",
+    "SWADESPICE.CustomSheetHint": "Click this button to customize all aspects of the sheet.",
+    "SWADESPICE.SettingName-MainBodyTabIconsQA": "Quick Access Tab Icon:",
+    "SWADESPICE.SettingHint-MainBodyTabIconsQA": "The icon for the Quick Access tab on the sheet.",
+    "SWADESPICE.SettingName-MainBodyTabIconsTraits": "Traits Tab Icon:",
+    "SWADESPICE.SettingHint-MainBodyTabIconsTraits": "The icon for the Traits tab on the sheet.",
+    "SWADESPICE.SettingName-MainBodyTabIconsEdges": "Edges Tab Icon:",
+    "SWADESPICE.SettingHint-MainBodyTabIconsEdges": "The icon for the Edges tab on the sheet.",
+    "SWADESPICE.SettingName-MainBodyTabIconsHindrances": "Hindrances Tab Icon:",
+    "SWADESPICE.SettingHint-MainBodyTabIconsHindrances": "The icon for the Hindrances tab on the sheet.",
+    "SWADESPICE.SettingName-MainBodyTabIconsAbilities": "Special Abilities Tab Icon:",
+    "SWADESPICE.SettingHint-MainBodyTabIconsAbilities": "The icon for the Special Abilities tab on the sheet.",
+    "SWADESPICE.SettingName-MainBodyTabIconsInventory": "Inventory Tab Icon:",
+    "SWADESPICE.SettingHint-MainBodyTabIconsInventory": "The icon for the Inventory tab on the sheet.",
+    "SWADESPICE.SettingName-MainBodyTabIconsPowers": "Powers Tab Icon:",
+    "SWADESPICE.SettingHint-MainBodyTabIconsPowers": "The icon for the Quick Access tab on the sheet.",
+    "SWADESPICE.SettingName-MainBodyTabIconsEffects": "Effects Tab Icon:",
+    "SWADESPICE.SettingHint-MainBodyTabIconsEffects": "The icon for the (Active) Effects tab on the sheet.",
+    "SWADESPICE.SettingName-MainBodyTabIconsDescription": "Description Tab Icon:",
+    "SWADESPICE.SettingHint-MainBodyTabIconsDescription": "The icon for the Description tab on the sheet.",
+    "SWADESPICE.SettingName-MainBodyTabBackgroundColour": "Tab Bar Background Colour:",
+    "SWADESPICE.SettingHint-MainBodyTabBackgroundColour": "The background colour of the bar behind the tab icons.",
+    "SWADESPICE.SettingName-MainBodyTabTextColour": "Tab Bar Text Colour:",
+    "SWADESPICE.SettingHint-MainBodyTabTextColour": "The text colour displayed in the bar with the tab icons.",
+    "SWADESPICE.Save": "Save",
+    "SWADESPICE.Export": "Export to JSON",
+    "SWADESPICE.Import": "Import",
+    "SWADESPICE.ImportWarning": "WARNING: Your current settings will be overwritten!",
+    "SWADESPICE.ImportHint": "Select a json file to import:",
+    "SWADESPICE.CompactModeName": "Compact Mode",
+    "SWADESPICE.CompactModeHint": "Compact Mode reduces the hight of the top bar (header) to make more space for the sheets tabs. As a result this decreases the size of the actor image preview. The actor image in the bio tab is unaffected.",
+    "SWADESPICE.QuickAccess": "Quick Access",
+    "SWADESPICE.Traits": "Traits",
+    "SWADESPICE.Edges": "Edges",
+    "SWADESPICE.Hindrances": "Hindrances",
+    "SWADESPICE.Abilities": "Special Abilities",
+    "SWADESPICE.Inventory": "Inventory",
+    "SWADESPICE.Powers": "Powers",
+    "SWADESPICE.Effects": "Effects",
+    "SWADESPICE.Description": "Description",
+    "SWADESPICE.SettingGeneralTab": "General",
+    "SWADESPICE.SettingLeftBarTab": "Left Bar",
+    "SWADESPICE.SettingTopBarTab": "Top Bar",
+    "SWADESPICE.SettingMainBodyTab": "Main Body",
+    "SWADESPICE.Actions": "Actions"
 }
